--- a/Views/ForecastView.xaml
+++ b/Views/ForecastView.xaml
@@ -1,13 +1,13 @@
 ﻿<UserControl x:Class="Veour.Views.ForecastView"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Veour.Views" 
-      xmlns:viewmodels="clr-namespace:Veour.ViewModels" 
-      d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800">
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:Veour.Views" 
+             xmlns:viewmodels="clr-namespace:Veour.ViewModels" 
+             d:DataContext="{d:DesignInstance Type=viewmodels:MainWindowViewModel}"
+             mc:Ignorable="d" 
+             d:DesignHeight="450" d:DesignWidth="800">
     
     <Viewbox Stretch="Uniform">
         <ItemsControl ItemsSource="{Binding Forecast}" AlternationCount="7">
@@ -73,6 +73,7 @@
                             </StackPanel>
                         </StackPanel>
                     </Border>
+                    <!-- Loops through and sets the borders for all except the last and sets the day status -->
                     <DataTemplate.Triggers>
                         <Trigger Property="ItemsControl.AlternationIndex" Value="0">
                             <Setter TargetName="ForecastBorder" Property="Border.BorderThickness" Value="0,0,1,0"/>
