Corrected text on the About page

--- a/Views/AboutView.xaml
+++ b/Views/AboutView.xaml
@@ -33,7 +33,7 @@
                        TextAlignment="Center" Foreground="White">
                 I'm a self-taught software developer creating programs to expand my knowledge and abilities after running the customer support team for a start up 
                 that was acquired by Google. During my 9 years in that role, I worked increasingly closer with the engineering team and began to develop a passion
-                for the problem solving nature of field and decided to pursue it as a new career.
+                for the problem solving nature of the job and decided to pursue it as a new career.
                 <LineBreak/>
                 <LineBreak/>
                 I departed Google to start learning the foundations of software development and learned the following languages: C#, Java, Python, and Javascript and frameworks such as 
